-Veritabanına kayıt ediliyor. -Oyun durdurma eklendi (P) -Oyunun adı değişti.

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>Sariaboom.SpaceInvaders</mainClass>
+                    <mainClass>Spaceboom.SpaceInvaders</mainClass>
                 </configuration>
             </plugin>
         </plugins>
