--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>Spaceboom.SpaceInvaders</mainClass>
+                    <mainClass>Spaceboom.SpaceBoom</mainClass>
                 </configuration>
             </plugin>
         </plugins>
